basic outline of how the webpage will look with CSS

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Taskinator</title>
+  <title>Coding Quiz Challenge</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-
 <header>
+  <p id="score">View High Scores</p>
+  <p id="timer">Timer</p>
+ </header>
+<main class="body" id="start-page">
+  <h1 class="head" id="question">Coding Quiz Challenge</h1>
+    <p id="paragraph" class="instructions">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+    <button id="Begin" class="btn">Start Quiz</button>
+    <ul class="answers" id="answer-one"></ul>
+    <ul class="answers" id="answer-two"></ul>
+    <ul class="answers" id="answer-three"></ul>
+    <ul class="answers" id="answer-four"></ul>
+</main>
+
 
 
 <body>
@@ -18,3 +30,4 @@
 </body>
 
 </html>
+
