--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
   <title>Coding Quiz Challenge</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<header>
-  <p id="score">View High Scores</p>
-  <p id="timer">Timer</p>
- </header>
-<main class="body" id="start-page">
-  <h1 class="head" id="question">Coding Quiz Challenge</h1>
-    <p id="paragraph" class="instructions">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-    <button id="Begin" class="btn">Start Quiz</button>
-    <ul class="answers" id="answer-one"></ul>
-    <ul class="answers" id="answer-two"></ul>
-    <ul class="answers" id="answer-three"></ul>
-    <ul class="answers" id="answer-four"></ul>
-</main>
-
-
 
 <body>
+
+  <header>
+    <p id="score">View High Scores</p>
+    <p id="timer">Time:0</p>
+  </header>
+  <main class="body" id="start-page">
+    <h1 class="head" id="question">Coding Quiz Challenge</h1>
+      <p id="paragraph" class="instructions">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+      <button id="Begin" class="btn">Start Quiz</button>
+      <ul class="answers" id="answer-one"></ul>
+      <ul class="answers" id="answer-two"></ul>
+      <ul class="answers" id="answer-three"></ul>
+      <ul class="answers" id="answer-four"></ul>
+  </main>
 
   <script src="./assets/js/script.js"></script>
 </body>
