fix css issue for question and display in general

--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
     <p id="score">View High Scores</p>
     <p id="timer">Time:0</p>
   </header>
-  <main class="body" id="start-page">
-    <h1 class="head" id="question">Coding Quiz Challenge</h1>
+  <main class="body">
+    <h1 id="title">Coding Quiz Challenge</h1>
       <p id="paragraph" class="instructions">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-      <button id="Begin" class="btn">Start Quiz</button>
-      <ul class="answers" id="answer-one"></ul>
-      <ul class="answers" id="answer-two"></ul>
-      <ul class="answers" id="answer-three"></ul>
-      <ul class="answers" id="answer-four"></ul>
+      <button id="begin" class="btn">Start Quiz</button>
+  </main>
+  <main class="body">
+    <h1 id="question"></h1>
+    <ol class="flex">
+        <button class="btn list"><li id="a1"></li></button>
+        <button class="btn list"><li id="a2"></li></button>
+        <button class="btn list"><li id="a3"></li></button>
+        <button class="btn list"><li id="a4"></li></button>
+      
+    </ol>
   </main>
 
   <script src="./assets/js/script.js"></script>
