question displays and gets rid of start page and timer works'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </main>
   <main class="body">
     <h1 id="question"></h1>
-    <ol class="flex">
+    <ol class="flex" id="list">
         <button class="btn list"><li id="a1"></li></button>
         <button class="btn list"><li id="a2"></li></button>
         <button class="btn list"><li id="a3"></li></button>
