--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <p id="score">View High Scores</p>
+    <a href = "indextwo.html" target="_blank" id="score" class="score">View High Scores</a>
     <p id="timer">Time:0</p>
   </header>
   <main class="body">
@@ -30,7 +30,6 @@
       
     </ol>
   </main>
-
   <script src="./assets/js/script.js"></script>
 </body>
 
