--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <a href = "indextwo.html" target="_blank" id="score" class="score">View High Scores</a>
+    <p id="score" class="score">View High Scores</p>
     <p id="timer">Time:0</p>
   </header>
   <main class="body">
